--- a/CV2/CV2.vcxproj.filters
+++ b/CV2/CV2.vcxproj.filters
@@ -19,6 +19,9 @@
     <ClInclude Include="InstRope.h">
       <Filter>Core</Filter>
     </ClInclude>
+    <ClInclude Include="NativeLinks.h">
+      <Filter>Core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Default">
