--- a/CV2/CV2.vcxproj
+++ b/CV2/CV2.vcxproj
@@ -150,12 +150,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="InstRope.cpp" />
+    <ClCompile Include="Logging.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="NativeRope.cpp" />
     <ClCompile Include="XedWrap.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="InstRope.h" />
-    <ClInclude Include="NativeLinks.h" />
+    <ClInclude Include="Logging.h" />
+    <ClInclude Include="NativeRope.h" />
     <ClInclude Include="Windas.h" />
     <ClInclude Include="XedWrap.h" />
   </ItemGroup>
