--- a/CV2/CV2.vcxproj
+++ b/CV2/CV2.vcxproj
@@ -153,12 +153,17 @@
     <ClCompile Include="Logging.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="NativeRope.cpp" />
+    <ClCompile Include="Obfuscator.cpp" />
+    <ClCompile Include="VirtualInst.cpp" />
     <ClCompile Include="XedWrap.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="InstRope.h" />
     <ClInclude Include="Logging.h" />
     <ClInclude Include="NativeRope.h" />
+    <ClInclude Include="Obfuscator.h" />
+    <ClInclude Include="VirtualInst.h" />
+    <ClInclude Include="VmStructure.h" />
     <ClInclude Include="Windas.h" />
     <ClInclude Include="XedWrap.h" />
   </ItemGroup>
