--- a/CV2/CV2.vcxproj
+++ b/CV2/CV2.vcxproj
@@ -23,7 +23,7 @@
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{0a55590c-c802-4a32-a355-aeefdc46f759}</ProjectGuid>
     <RootNamespace>CV2</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -149,6 +149,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FunctionBlock.cpp" />
     <ClCompile Include="InstRope.cpp" />
     <ClCompile Include="Logging.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -158,6 +159,7 @@
     <ClCompile Include="XedWrap.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FunctionBlock.h" />
     <ClInclude Include="InstRope.h" />
     <ClInclude Include="Logging.h" />
     <ClInclude Include="NativeRope.h" />
