--- a/CV2/CV2.vcxproj.filters
+++ b/CV2/CV2.vcxproj.filters
@@ -20,8 +20,14 @@
     <ClCompile Include="Obfuscator.cpp">
       <Filter>Obfuscator</Filter>
     </ClCompile>
+    <ClCompile Include="BranchMan.cpp">
+      <Filter>Obfuscator\Techniques</Filter>
+    </ClCompile>
     <ClCompile Include="FunctionBlock.cpp">
-      <Filter>Obfuscator</Filter>
+      <Filter>Obfuscator\Utilities</Filter>
+    </ClCompile>
+    <ClCompile Include="Jit.cpp">
+      <Filter>Obfuscator\Techniques</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -49,8 +55,14 @@
     <ClInclude Include="Obfuscator.h">
       <Filter>Obfuscator</Filter>
     </ClInclude>
+    <ClInclude Include="BranchMan.h">
+      <Filter>Obfuscator\Techniques</Filter>
+    </ClInclude>
     <ClInclude Include="FunctionBlock.h">
-      <Filter>Obfuscator</Filter>
+      <Filter>Obfuscator\Utilities</Filter>
+    </ClInclude>
+    <ClInclude Include="Jit.h">
+      <Filter>Obfuscator\Techniques</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -69,5 +81,14 @@
     <Filter Include="Obfuscator">
       <UniqueIdentifier>{10153015-ba51-4e34-8a9a-30f6795352b9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Obfuscator\Techniques">
+      <UniqueIdentifier>{25549e73-4289-4d10-ba41-2861bcdede45}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Obfuscator\Utilities">
+      <UniqueIdentifier>{e1bf0645-4d0d-4bc3-8030-b30205cfab82}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
