finished pre and post operations
moved relative jump delta calculations into preoperations and added different return values FOR pre/post ops to support things like this. PREOP_RESTART

--- a/CV2/CV2.vcxproj.filters
+++ b/CV2/CV2.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClCompile Include="Jit.cpp">
       <Filter>Obfuscator\Techniques</Filter>
     </ClCompile>
+    <ClCompile Include="RandomAssembly.cpp">
+      <Filter>Obfuscator</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Windas.h">
@@ -63,6 +66,9 @@
     </ClInclude>
     <ClInclude Include="Jit.h">
       <Filter>Obfuscator\Techniques</Filter>
+    </ClInclude>
+    <ClInclude Include="RandomAssembly.h">
+      <Filter>Obfuscator</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
