--- a/CV2/CV2.vcxproj
+++ b/CV2/CV2.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="NativeRope.cpp" />
     <ClCompile Include="Obfuscator.cpp" />
+    <ClCompile Include="RandomAssembly.cpp" />
     <ClCompile Include="VirtualInst.cpp" />
     <ClCompile Include="XedWrap.cpp" />
   </ItemGroup>
@@ -169,6 +170,7 @@
     <ClInclude Include="Logging.h" />
     <ClInclude Include="NativeRope.h" />
     <ClInclude Include="Obfuscator.h" />
+    <ClInclude Include="RandomAssembly.h" />
     <ClInclude Include="VirtualInst.h" />
     <ClInclude Include="VmStructure.h" />
     <ClInclude Include="Windas.h" />
