--- a/CV2/CV2.vcxproj
+++ b/CV2/CV2.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="FunctionBlock.cpp" />
     <ClCompile Include="InstRope.cpp" />
     <ClCompile Include="Jit.cpp" />
+    <ClCompile Include="Junk.cpp" />
     <ClCompile Include="Logging.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="NativeRope.cpp" />
@@ -167,6 +168,7 @@
     <ClInclude Include="FunctionBlock.h" />
     <ClInclude Include="InstRope.h" />
     <ClInclude Include="Jit.h" />
+    <ClInclude Include="Junk.h" />
     <ClInclude Include="Logging.h" />
     <ClInclude Include="NativeRope.h" />
     <ClInclude Include="Obfuscator.h" />
