--- a/CV2/CV2.vcxproj
+++ b/CV2/CV2.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="InstRope.cpp" />
     <ClCompile Include="Jit.cpp" />
     <ClCompile Include="Junk.cpp" />
+    <ClCompile Include="LabelManager.cpp" />
     <ClCompile Include="Logging.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="NativeRope.cpp" />
@@ -169,6 +170,7 @@
     <ClInclude Include="InstRope.h" />
     <ClInclude Include="Jit.h" />
     <ClInclude Include="Junk.h" />
+    <ClInclude Include="LabelManager.h" />
     <ClInclude Include="Logging.h" />
     <ClInclude Include="NativeRope.h" />
     <ClInclude Include="Obfuscator.h" />
